# quzer

./: .gitignore  README.md  pyproject.toml
src/quzer/: __main__.py  tokenizer.py  utils.py
